--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.5",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "nanoid": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "7.19.0",
