--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.5",
     "morgan": "1.10.0",
     "nanoid": "^4.0.2"
